[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nersemble_benchmark"
version = "0.2.0"
description = "Official toolkit for the NeRSemble Photorealistic 3D Head Avatar Benchmark"
authors = [
    { name = "Tobias Kirschstein", email = "tobias.kirschstein@gmail.com" },
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "tyro==1.0.13",
    "environs==15.0.1",
    "elias==0.4.19",
    "dreifus==0.1.28",
    "pyvista==0.45.3",
    "tqdm==4.67.3",
    "open3d==0.19.0",
    "flame-model==0.0.3",
    "mediapy==1.2.6",
    "imageio[pyav]==2.37.3",
    "trimesh==4.12.2",
    "numpy==2.4.4",
    "opencv_python==4.13.0.92",
    "requests==2.33.1"
]

[project.optional-dependencies]
torch = [
    "torch"
]

[project.scripts]
nersemble-benchmark-download = "nersemble_benchmark.scripts.download_data:main_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nersemble_benchmark*"]